chore: fix import docs swagger
